--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@ node_modules
 ignition/deployments/chain-31337
 
 # Local blockchain data
-local-node/cl-data
-local-node/el-data
+cl-node
+el-node
