--- a/smartcontracts/package.json
+++ b/smartcontracts/package.json
@@ -17,5 +17,9 @@
     "hardhat-gas-reporter": "^2.3.0",
     "solidity-coverage": "^0.8.17",
     "typechain": "^8.3.2"
+  },
+  "dependencies": {
+    "boring-webcrypto-sha256": "^1.0.0",
+    "solc": "^0.8.33"
   }
 }
